--- a/SecondAssessment/SecondAssessment.vcxproj
+++ b/SecondAssessment/SecondAssessment.vcxproj
@@ -156,6 +156,9 @@
     <ClInclude Include="Camera.h" />
     <ClInclude Include="Collider.h" />
     <ClInclude Include="Collision.h" />
+    <ClInclude Include="LAZERZMENU.h" />
+    <ClInclude Include="LAZERZLEVEL.h" />
+    <ClInclude Include="LAZERZMAIN.h" />
     <ClInclude Include="Math_Library\Flops.h" />
     <ClInclude Include="Math_Library\Mat2.h" />
     <ClInclude Include="Math_Library\Mat3.h" />
