--- a/SecondAssessment/SecondAssessment.vcxproj.filters
+++ b/SecondAssessment/SecondAssessment.vcxproj.filters
@@ -114,6 +114,9 @@
     <ClInclude Include="LAZERZMENU.h">
       <Filter>Header Files\LAZERZGAME</Filter>
     </ClInclude>
+    <ClInclude Include="LAZERZCANNON.h">
+      <Filter>Header Files\LAZERZGAME</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Main.cpp">
