--- a/SecondAssessment/SecondAssessment.vcxproj.filters
+++ b/SecondAssessment/SecondAssessment.vcxproj.filters
@@ -117,6 +117,9 @@
     <ClInclude Include="LAZERZCANNON.h">
       <Filter>Header Files\LAZERZGAME</Filter>
     </ClInclude>
+    <ClInclude Include="ReflectionFns.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Main.cpp">
