--- a/SecondAssessment/SecondAssessment.vcxproj.filters
+++ b/SecondAssessment/SecondAssessment.vcxproj.filters
@@ -120,6 +120,9 @@
     <ClInclude Include="ReflectionFns.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="LAZERZTARGET.h">
+      <Filter>Header Files\LAZERZGAME</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Main.cpp">
