--- a/SecondAssessment/SecondAssessment.vcxproj
+++ b/SecondAssessment/SecondAssessment.vcxproj
@@ -71,6 +71,8 @@
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <LinkIncremental>true</LinkIncremental>
+    <IncludePath>C:\Users\aaron.andrews\Source\Repos\SecondAssessment\Lib;C:\Users\aaron.andrews\Source\Repos\SecondAssessment\SecondAssessment\Math_Library;$(IncludePath)</IncludePath>
+    <LibraryPath>C:\Users\aaron.andrews\Source\Repos\SecondAssessment\Lib;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <LinkIncremental>true</LinkIncremental>
@@ -89,12 +91,12 @@
       <Optimization>Disabled</Optimization>
       <PreprocessorDefinitions>WIN32;_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <SDLCheck>true</SDLCheck>
-      <AdditionalIncludeDirectories>C:\Users\Aquin\Source\Repos\SecondAssessment2\SecondAssessment\Math_Library;C:\Users\Aquin\Source\Repos\SecondAssessment2\Lib;C:\Users\aaron.andrews\Documents\Visual Studio 2015\Projects\SecondAssessment\Lib;C:\Users\aaron.andrews\Documents\Visual Studio 2015\Projects\SecondAssessment\SecondAssessment\Math_Library;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>C:\Users\aaron.andrews\Documents\Visual Studio 2015\Projects\SecondAssessment\Lib;C:\Users\aaron.andrews\Documents\Visual Studio 2015\Projects\SecondAssessment\SecondAssessment\Math_Library;C:\Users\Aquin\Source\Repos\SecondAssessment2\SecondAssessment\Math_Library;C:\Users\Aquin\Source\Repos\SecondAssessment2\Lib;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalLibraryDirectories>C:\Users\Aquin\Source\Repos\SecondAssessment2\SecondAssessment\Math_Library;C:\Users\Aquin\Source\Repos\SecondAssessment2\Lib;C:\Users\aaron.andrews\Documents\Visual Studio 2015\Projects\SecondAssessment\Lib;C:\Users\aaron.andrews\Documents\Visual Studio 2015\Projects\SecondAssessment\SecondAssessment\Math_Library;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>C:\Users\aaron.andrews\Documents\Visual Studio 2015\Projects\SecondAssessment\Lib;C:\Users\aaron.andrews\Documents\Visual Studio 2015\Projects\SecondAssessment\SecondAssessment\Math_Library;C:\Users\Aquin\Source\Repos\SecondAssessment2\SecondAssessment\Math_Library;C:\Users\Aquin\Source\Repos\SecondAssessment2\Lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
       <AdditionalDependencies>Math_Library.lib;sfw_d.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
@@ -106,10 +108,13 @@
       <Optimization>Disabled</Optimization>
       <PreprocessorDefinitions>_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <SDLCheck>true</SDLCheck>
+      <AdditionalIncludeDirectories>C:\Users\aaron.andrews\Source\Repos\SecondAssessment\Lib;C:\Users\aaron.andrews\Source\Repos\SecondAssessment\SecondAssessment\Math_Library;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
+      <AdditionalLibraryDirectories>C:\Users\aaron.andrews\Source\Repos\SecondAssessment\Lib;C:\Users\aaron.andrews\Source\Repos\SecondAssessment\SecondAssessment\Math_Library;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalDependencies>Math_Library.lib;sfw_d.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
